# openpine

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  __init__.py  cli.py  config.py  docker-compose.yml  exchange_metadata.py  exports.py  integrations.py  openpine-gateway.service  pyproject.toml  telegram_commands.py
.github/workflows/: ci.yml  stack-ci.yml
accounts/: manager.py  models.py
adapters/: __init__.py  bars.py
artifacts/: store.py
batch/: persistent_cache.py  runner.py  tv_corpus.py
cli/: batch.py  config.py  data.py  main.py  ops.py  reports.py  storage.py
compile/: __init__.py  adapter.py  pipeline.py
config/: env.py  loader.py  model.py
contracts/: __init__.py
daemon/: refresh_service.py  service.py  telegram_service.py
data/: __init__.py  bar_query.py  candle_storage.py  contracts.py  data_orchestrator.py  direct_data_provider.py  direct_provider.py  footprint_orchestrator.py  models.py  orchestrator.py  parallel_fetcher.py  periodic_fetcher.py  persistent_cache.py  planner.py  provider_adapter.py
docs/: ARCHITECTURE.md  DATABASE.md  DEVELOPMENT.md  README.md  RELEASE_4_0.md  WEB_UI_BOUNDARY.md
domain/: instrument.py
events/: __init__.py  bus.py  types.py
execution/: __init__.py  binance.py  bybit.py  live_orders.py  models.py  paper.py  router.py
export/: __init__.py  batch.py  equity.py  json.py  plots.py  schemas.py  window.py
gateway/: __init__.py  config.py  deps.py  live_runner.py  schemas.py  server.py  ws_manager.py
gateway/routes/: accounts_data.py  backtest.py  dashboard.py  events.py  optimizer.py  orders_positions.py  pine_ops.py  pine_sources.py  strategies.py  trading.py
jobs/: models.py  retry.py  scheduler.py
notifications/: telegram.py
openpine/: __init__.py  __main__.py  distribution.py  exchange_metadata.py  integrations.py  quality.py  release.py  telegram_commands.py  timezones.py
openpine-ui/: index.html  package-lock.json  package.json  run-dev.sh  start-server.mjs  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
openpine-ui/src/: main.ts
openpine/_compat/: __init__.py  parquet.py  structlog.py
openpine/accounts/: __init__.py  manager.py  models.py
openpine/achievements/: catalog.py  engine.py  i18n_overrides.py  seed.py
openpine/adapters/: __init__.py  bars.py
openpine/artifacts/: __init__.py  store.py
openpine/batch/: __init__.py  persistent_cache.py  runner.py  tv_corpus.py
openpine/cli/: __init__.py  batch.py  compare.py  config.py  data.py  main.py  ops.py  optimizer.py  reports.py  runtime_helpers.py  storage.py
openpine/compile/: __init__.py  adapter.py  pipeline.py
openpine/config/: __init__.py  env.py  loader.py  model.py
openpine/contracts/: __init__.py
openpine/daemon/: __init__.py  refresh_service.py  service.py  telegram_service.py
openpine/data/: __init__.py  cache_io.py  candle_storage.py  contracts.py  direct_data_provider.py  direct_provider.py  footprint_orchestrator.py  models.py  orchestrator.py  parallel_fetcher.py  periodic_fetcher.py  persistent_cache.py  provider_adapter.py  row_helpers.py
openpine/domain/: __init__.py
openpine/events/: bus.py  types.py
openpine/execution/: binance.py  bybit.py  ccxt_common.py  models.py  paper.py  router.py
openpine/export/: __init__.py  _utils.py  batch.py  json.py  plots.py  trades.py
openpine/gateway/: config.py  deps.py  live_runner.py  schemas.py  server.py  ws_manager.py
openpine/jobs/: __init__.py  models.py  scheduler.py
openpine/notifications/: __init__.py  telegram.py
openpine/optimizer/: __init__.py  adapter.py
openpine/orders/: manager.py  models.py
openpine/pine/: registry.py  source.py
openpine/recovery/: rebuild.py
openpine/registry/: __init__.py  strategies.py
openpine/risk/: __init__.py  manager.py
openpine/runtime/: __init__.py  declaration_args.py  (+1 more)
optimizer/: __init__.py  adapter.py
orders/: __init__.py  manager.py  models.py
pine/: __init__.py  registry.py
recovery/: __init__.py  rebuild.py
registry/: strategies.py
reports/: op_tv_007_tradingview_parity_2026-05-28.md
risk/: manager.py
runtime/: __init__.py  engine.py
scripts/: cli_tv_export_batch.py  install.sh  release_gate.sh  render_badges.py  run_gateway_systemd.sh  smoke_import_parse.sh
state/: __init__.py  errors.py  policy.py  store.py
storage/: __init__.py  adapters.py  backends.py  backtest_dto.py  backtest_storage.py  backup.py  manifests.py  migrations.py  sqlite_storage.py  strategy_ledger.py
streams/: __init__.py  adapter.py  manager.py  provider_adapter.py
tests/: conftest.py  test_achievements.py  test_architecture_guards.py  test_archive_and_progress.py  test_backend_batch_runner_massive_pass.py  test_backend_big_coverage_pass.py  test_backend_cli_main_massive_pass.py  test_backend_cov90_accounts_compile_runtime.py  test_backend_cov90_cli_doctor_telegram.py  test_backend_cov90_cli_pine_plugins.py  test_backend_cov90_compile_accounts.py  test_backend_cov90_live_backtest.py  test_backend_cov90_runtime_artifacts.py  test_backend_cov90_strategy_replay.py  test_backend_coverage_pass10.py  test_backend_coverage_pass11.py  test_backend_coverage_pass12.py  test_backend_coverage_pass13.py  test_backend_coverage_pass15.py  test_backend_coverage_pass18.py  test_backend_coverage_pass19.py  test_backend_coverage_pass20.py  test_backend_coverage_pass21.py  test_backend_coverage_pass22.py  test_backend_coverage_pass23.py  test_backend_coverage_pass24.py  test_backend_coverage_pass25.py  test_backend_coverage_pass26.py  test_backend_coverage_pass27.py  test_backend_coverage_pass28.py  test_backend_coverage_pass29.py  test_backend_coverage_pass30.py  test_backend_coverage_pass31.py  test_backend_coverage_pass32.py  test_backend_coverage_pass33.py  test_backend_coverage_pass34.py  test_backend_coverage_pass35.py  test_backend_coverage_pass36.py  test_backend_coverage_pass37_major_paths.py  test_backend_coverage_pass38_batch_runtime_paths.py  (+83 more)
universe/: __init__.py  active_universe.py
workers/: __init__.py  pool.py  strategy_fanout.py  strategy_job_executor.py
(+125 files in other folders)
