[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openpine"
version = "2.17.0"
description = "OpenPine product orchestration boundary for the Pine stack"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "structlog>=24.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "pine2ast @ git+https://github.com/s7cret/pine2ast.git@v2.17.0",
    "ast2python @ git+https://github.com/s7cret/ast2python.git@v2.17.0",
    "pinelib @ git+https://github.com/s7cret/pinelib.git@v2.17.0",
    "backtest-engine @ git+https://github.com/s7cret/backtest_engine.git@v2.17.0",
    "marketdata-provider @ git+https://github.com/s7cret/marketdata-provider.git@v2.18.0",
    "optimizer @ git+https://github.com/s7cret/optimizer.git@v2.17.0",
]

[project.urls]
Homepage = "https://github.com/s7cret/openpine"
Repository = "https://github.com/s7cret/openpine"
Issues = "https://github.com/s7cret/openpine/issues"
Documentation = "https://github.com/s7cret/openpine#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "httpx>=0.28.0",
]

[project.scripts]
openpine = "openpine.cli.main:main"

[tool.setuptools]
package-dir = {"openpine" = "."}
packages = [
    "openpine",
    "openpine.accounts",
    "openpine.adapters",
    "openpine.artifacts",
    "openpine.batch",
    "openpine.cli",
    "openpine.compile",
    "openpine.config",
    "openpine.contracts",
    "openpine.daemon",
    "openpine.data",
    "openpine.domain",
    "openpine.events",
    "openpine.execution",
    "openpine.export",
    "openpine.jobs",
    "openpine.notifications",
    "openpine.optimizer",
    "openpine.orders",
    "openpine.pine",
    "openpine.recovery",
    "openpine.registry",
    "openpine.risk",
    "openpine.runtime",
    "openpine.state",
    "openpine.storage",
    "openpine.streams",
    "openpine.workers",
    "openpine.gateway",
    "openpine.gateway.routes",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
