[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openpine"
version = "4.0.0"
description = "OpenPine product orchestration boundary for the Pine stack"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "msgpack>=1.0,<2",
    "pydantic>=2.0.0",
    "structlog>=24.0.0",
    "fastapi>=0.115.0,<0.137",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
    "pine2ast @ git+https://github.com/s7cret/pine2ast.git@bf2614855851e0626bbe802b6d945ce23593e886",
    "ast2python @ git+https://github.com/s7cret/ast2python.git@d6d83ba7d11db651e17307244033394cf8a623ab",
    "pinelib @ git+https://github.com/s7cret/pinelib.git@33239a0093fa5d548058d79d5d079104db0ef43e",
    "backtest-engine @ git+https://github.com/s7cret/backtest_engine.git@d75c270cd6aae4b557ec72f96bd5d33407aee334",
    "marketdata-provider @ git+https://github.com/s7cret/marketdata-provider.git@f42cd7d7cb2069a40d00917978a8732aa3278423",
    "optimizer @ git+https://github.com/s7cret/optimizer.git@2922b0c515ad6e68cf0a078635235604b4c3c220",
]

[project.urls]
Homepage = "https://github.com/s7cret/openpine"
Repository = "https://github.com/s7cret/openpine"
Issues = "https://github.com/s7cret/openpine/issues"
Documentation = "https://github.com/s7cret/openpine#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "httpx>=0.28.0",
    "pytest-asyncio>=0.23.0",
    "matplotlib>=3.8.0",
]

[project.scripts]
openpine = "openpine.cli.main:main"

[tool.setuptools.packages.find]
include = ["openpine*"]
exclude = ["openpine-ui*"]

[tool.setuptools.package-data]
openpine = ["py.typed", "storage/migrations/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false

[tool.ruff.lint.per-file-ignores]
"openpine/cli/main.py" = ["E402", "F401"]
"openpine/notifications/telegram.py" = ["E402"]

[tool.coverage.run]
source = ["openpine"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
